Target java 21 + update versions